--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                       <label for="message" class="form-label d-block text-center">Message</label>
                       <textarea class="form-control" id="message" rows="4" placeholder="Write your message..."></textarea>
                   </div>
-                  <button type="submit" class="btn btn-outline-dark d-block mx-auto">Submit</button>
+                  <button type="submit" class="btn btn-outline-dark d-block mx-auto">Submitt</button>
               </form>
           </div>
       </div>
