--- a/index.html
+++ b/index.html
@@ -34,8 +34,10 @@
                         <a class="nav-link" href="#contact">Contact</a>
                     </li>
                 </ul>
-              <div>
+                <div>
                 <button class="btn btn-outline-dark" data-bs-toggle="modal" data-bs-target="#adminModal">Admin</button>
+                </div>
+            </div>
         </div>
     </nav>
 </header>
