--- a/admin.html
+++ b/admin.html
@@ -6,9 +6,37 @@
   <title>Admin panel</title>
   <link rel="stylesheet" href="css/bootstrap.css">
   <link rel="stylesheet" href="css/_custom.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
 <body>
+  <div class="container-fluid">
+    <div class="row">
+      <!-- sidebar -->
+      <div class="col-sm-4 col-md-3 col-lg-2 d-flex flex-column bg-dark p-4 vh-100">
+        <h1 class="text-white">Admin Panel</h1>
+        <nav class="nav d-flex flex-column">
+          <a class="nav-link text-white py-2 px-0" href="">
+            <i class="fa fa-dashboard py-2 px-0"></i> Dashboard
+          </a>
+          <a class="nav-link text-white py-2 px-0" href="">
+            <i class="fa fa-shopping-cart"></i> Products
+          </a>
+          <a class="nav-link text-white py-2 px-0" href="">
+            <i class="fa fa-credit-card"></i> Orders
+          </a>
+          <a class="nav-link text-white py-2 px-0" href="">
+            <i class="fa fa-user"></i> Users
+          </a>
+        </nav>
+        <h2 class="mt-auto text-white nav-link"><hr class="text-white">Lukáš Pospíšek</h2>
+      </div>
+      <!-- content -->
+      <div class="col-sm-8 col-md-9 col-lg-10 bg-light vh-100 p-4">
+        <h2>Dashboard</h2>
+      </div>
+    </div>
+  </div>
 <script src="js/bootstrap.bundle.js"></script>
 </body>
 </html>
