--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Admin panel</title>
-  <link rel="stylesheet" href="css/bootstrap.css">
-  <link rel="stylesheet" href="css/_custom.css">
+  <link rel="stylesheet" href="../css/bootstrap.css">
+  <link rel="stylesheet" href="../css/_custom.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
@@ -29,7 +29,12 @@
             <i class="fa fa-user"></i> Users
           </a>
         </nav>
-        <h2 class="mt-auto text-white nav-link"><hr class="text-white">Lukáš Pospíšek</h2>
+
+        <div class="text-white mt-auto">
+          <hr class="text-white">
+          <a class="nav-link" href="user-profile.html">Lukáš Pospíšek</a>
+        </div>
+
       </div>
       <!-- content -->
       <div class="col-sm-8 col-md-9 col-lg-10 bg-light vh-100 p-4">
@@ -37,6 +42,6 @@
       </div>
     </div>
   </div>
-<script src="js/bootstrap.bundle.js"></script>
+<script src="../js/bootstrap.bundle.js"></script>
 </body>
 </html>
