--- a/pages/index.html
+++ b/pages/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap</title>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/_custom.css">
+    <link rel="stylesheet" href="../css/bootstrap.css">
+    <link rel="stylesheet" href="../css/_custom.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
@@ -13,7 +13,7 @@
 <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#"><img src="images/apple.png" alt="logo"></a>
+            <a class="navbar-brand" href="#"><img src="../images/apple.png" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -66,7 +66,7 @@
             <label class="form-check-label" for="exampleCheck1">Check me out</label>
           </div>
           <button type="submit" class="btn btn-outline-dark">
-            <a class="nav-link" href="admin.html">Login</a>
+            <a class="nav-link" href="dashboard.html">Login</a>
           </button>
         </form>
       </div>
@@ -90,7 +90,7 @@
       <div class="row gx-5 gy-5">
         <div class="col-lg-4">
           <div class="card">
-            <img src="images/apple-iphone.png" class="card-img-top" alt="Iphone">
+            <img src="../images/apple-iphone.png" class="card-img-top" alt="Iphone">
             <div class="card-body">
               <h5 class="card-title">iPhone</h5>
               <p class="card-text">iPhone offers top-tier performance, an excellent camera, and elegant design. Everything you need in one device.</p>
@@ -100,7 +100,7 @@
         </div>
         <div class="col-lg-4">
           <div class="card">
-            <img src="images/apple-ipad.png" class="card-img-top" alt="Ipad">
+            <img src="../images/apple-ipad.png" class="card-img-top" alt="Ipad">
             <div class="card-body">
               <h5 class="card-title">iPad</h5>
               <p class="card-text">iPad is powerful, versatile, and incredibly easy to use. Perfect for work, entertainment, and creativity anytime, anywhere.</p>
@@ -110,7 +110,7 @@
         </div>
         <div class="col-lg-4">
           <div class="card">
-            <img src="images/apple-MacBook.png" class="card-img-top" alt="Macbook">
+            <img src="../images/apple-MacBook.png" class="card-img-top" alt="Macbook">
             <div class="card-body">
               <h5 class="card-title">Macbook</h5>
               <p class="card-text">MacBook combines performance, battery life, and premium design in one device. An ideal choice for work, study, and everyday use.</p>
@@ -219,6 +219,6 @@
       </div>
   </section>
 </main>
-<script src="js/bootstrap.bundle.js"></script>
+<script src="../js/bootstrap.bundle.js"></script>
 </body>
 </html>
