--- a/pages/user-profile.html
+++ b/pages/user-profile.html
@@ -16,16 +16,16 @@
     <div class="col-sm-4 col-md-3 col-lg-2 d-flex flex-column bg-dark p-4 vh-100">
       <h1 class="text-white">Admin Panel</h1>
       <nav class="nav d-flex flex-column">
-        <a class="nav-link text-white py-2 px-0" href="">
+        <a class="nav-link text-white py-2 px-0" href="dashboard.html">
           <i class="fa fa-dashboard py-2 px-0"></i> Dashboard
         </a>
-        <a class="nav-link text-white py-2 px-0" href="">
+        <a class="nav-link text-white py-2 px-0" href="products.html">
           <i class="fa fa-shopping-cart"></i> Products
         </a>
-        <a class="nav-link text-white py-2 px-0" href="">
+        <a class="nav-link text-white py-2 px-0" href="orders.html">
           <i class="fa fa-credit-card"></i> Orders
         </a>
-        <a class="nav-link text-white py-2 px-0" href="">
+        <a class="nav-link text-white py-2 px-0" href="users.html">
           <i class="fa fa-user"></i> Users
         </a>
       </nav>
